<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activities.MainActivity">

            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/tv_register_title"
                android:textAlignment="center"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/tv_name_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/tv_main_name_form"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register_title">

            </TextView>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </EditText>


            <TextView
                android:id="@+id/tv_company_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/tv_main_company_form"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name">

            </TextView>

            <EditText
                android:id="@+id/et_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_company_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </EditText>


            <TextView
                android:id="@+id/tv_email_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/tv_main_email_form"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_company">

            </TextView>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_email_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </EditText>


            <TextView
                android:id="@+id/tv_password_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/tv_main_pass_form"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email">

            </TextView>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_password_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </EditText>

            <TextView
                android:id="@+id/tv_conf_password_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/tv_main_pass_conf_form"
                app:flow_horizontalAlign="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password">

            </TextView>

            <EditText
                android:id="@+id/et_conf_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_conf_password_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </EditText>


            <Button
                android:id="@+id/bt_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:text="@string/bt_signin"
                android:textSize="16sp"
                android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_conf_password"
                app:layout_constraintBottom_toBottomOf="parent">

            </Button>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>