<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="spending"
            type="com.unab.tads.expensesapp.model.entities.Spending" />
        <variable
            name="submitbutton"
            type="String" />
        <variable
            name="crudmode"
            type="Integer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            tools:context=".view.activities.SpendingFormActivity">

            <TextView
                android:id="@+id/tv_invoice_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/text_invoice"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/iv_invoice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <ImageView
                android:id="@+id/iv_invoice"
                android:layout_width="200dp"
                android:layout_height="200dp"
                bind:image="@{spending.imageUrl}"
                android:tooltipText="Toca para cargar una imagen"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_invoice_text">

            </ImageView>


            <TextView
                android:id="@+id/tv_amount_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_amount"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_invoice"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/tv_currency"
                app:layout_constraintStart_toEndOf="@id/iv_invoice"
                app:layout_constraintTop_toBottomOf="@id/tv_amount_text"
                android:elevation="@dimen/cardview_default_elevation"
                android:includeFontPadding="true"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

            </EditText>

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_currency"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/et_amount"
                app:layout_constraintTop_toBottomOf="@id/tv_amount_text">

            </TextView>


            <TextView
                android:id="@+id/tv_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_date"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_invoice"
                app:layout_constraintTop_toBottomOf="@id/et_amount">

            </TextView>

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:clickable="true"
                android:focusable="true"
                android:inputType="text"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_invoice"
                app:layout_constraintTop_toBottomOf="@id/tv_date_text"
                tools:ignore="TextFields"
                android:elevation="@dimen/cardview_default_elevation"
                android:includeFontPadding="true"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

            </EditText>

            <TextView
                android:id="@+id/tv_category_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_category_spinner"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_date">

            </TextView>

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category_text"
                android:background="@drawable/spinner_border">


            </Spinner>

            <TextView
                android:id="@+id/tv_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_description"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp_category">

            </TextView>

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_text"
                android:text="@{spending.description}"
                tools:ignore="RtlCompat"
                android:elevation="@dimen/cardview_default_elevation"
                android:includeFontPadding="true"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

            </EditText>




            <Button
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="60dp"
                android:layout_marginStart="8dp"
                android:text="@{submitbutton}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description"
                app:layout_constraintVertical_bias="0.091">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
