<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="project"
            type="com.unab.tads.expensesapp.model.entities.Project" />
        <variable
            name="submitbutton"
            type="String" />
        <variable
            name="crudmode"
            type="int" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            tools:context=".view.activities.SpendingFormActivity">

            <TextView
                android:id="@+id/tv_form_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_form_title"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/et_project_name_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_project_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_project_name_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_project_name_value">

            </TextView>

            <EditText
                android:id="@+id/et_project_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_form_title"
                app:layout_constraintStart_toEndOf="@id/tv_project_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="@dimen/cardview_default_elevation"
                android:text="@={project.name}"
                android:includeFontPadding="true"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

            </EditText>


            <TextView
                android:id="@+id/tv_date_text"
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/text_date"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_project_name_value" >


            </TextView>

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50dp"
                android:clickable="true"
                android:elevation="@dimen/cardview_default_elevation"
                android:focusable="true"
                android:includeFontPadding="true"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_date_text"
                app:layout_constraintTop_toBottomOf="@+id/et_project_name_value"
                tools:ignore="TextFields">

            </EditText>


            <TextView
                android:id="@+id/tv_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_description"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_date">

            </TextView>

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_text"
                tools:ignore="RtlCompat"
                android:elevation="@dimen/cardview_default_elevation"
                android:text="@={project.description}"
                android:includeFontPadding="true"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">

            </EditText>


            <Button
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="60dp"
                android:layout_marginStart="10dp"
                android:text="@{submitbutton}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>